# Messaging

./: .gitignore  README.md
ActionScript/: README.md
ActionScript/ApiUsageAir/: .actionScriptProperties  README.md
ActionScript/ApiUsageAir/libs/: OrtcClient.swc
ActionScript/ApiUsageAir/src/: ApiUsageAir-app.xml  ApiUsageAir.mxml
ActionScript/ApiUsageFlash/: ApiUsageFlash.as  ApiUsageFlash.fla  ApiUsageFlash.html  ApiUsageFlash.swf  README.md
ActionScript/ApiUsageFlash/libs/: framework.swc
ActionScript/ApiUsageFlex/: .actionScriptProperties  README.md
ActionScript/ApiUsageFlex/src/: ApiUsageFlex.mxml
Android/: AndroidManifest.xml  README.md  project.properties
Android with Push Notifications/: AndroidManifest.xml  README.md  project.properties
Android with Push Notifications/RTMChat/app/: build.gradle
Android with Push Notifications/res/layout/: activity_main.xml
Android with Push Notifications/res/values/: strings.xml
Android/app/: build.gradle  proguard-rules.pro
Android/res/layout/: activity_main.xml
Android/res/values/: strings.xml
AngularJS/: realtime-chat.html
C/: CMakeLists.txt  README.md
C/example/: CMakeLists.txt  example.c  simple.c
C/lib/: CMakeLists.txt  authentication.c  authentication.h  balancer.c  balancer.h  channel.c  channel.h  common.c  common.h  connection.c  connection.h  dlist.c  dlist.h  libortc.h  message.c  message.h  ortc.c  presence.c  presence.h
CordovaPush/: README.md  index.html
CordovaPush/ApiiOS/include/: OrtcClient.h  RealtimePushAppDelegate.h
CordovaPush/CordovaPush/: CordovaPush-Info.plist  CordovaPush-Prefix.pch  config.xml  main.m
CordovaPush/CordovaPush.xcodeproj/: project.pbxproj
CordovaPush/CordovaPush.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CordovaPush/CordovaPush/Classes/: AppDelegate.h  AppDelegate.m  MainViewController.h  MainViewController.m  OrtcPushPlugin.h  OrtcPushPlugin.m  RealtimeCordovaDelegate.h  RealtimeCordovaDelegate.m
CordovaPush/www/: index.html
CordovaPush/www/css/: index.css
CordovaPush/www/js/: index.js
DotNet/: README.md
DotNet/WebSite/: About.aspx  About.aspx.cs  Default.aspx  Default.aspx.cs  Global.asax  README.md  Web.config
DotNet/WebSite/Account/: ChangePassword.aspx  ChangePassword.aspx.cs  ChangePasswordSuccess.aspx  ChangePasswordSuccess.aspx.cs  Login.aspx  Login.aspx.cs  Register.aspx  Register.aspx.cs
DotNet/WindowsApp/: Ibt.Ortc.Demo.WindowsApp.csproj  Ibt.Ortc.Demo.WindowsApp.sln  OrtcUsageForm.Designer.cs  OrtcUsageForm.cs  OrtcUsageForm.resx  Program.cs  README.md  app.config
IonicPush/: README.md  index.html
IonicPush/css/: style.css
Java/: README.md
Javascript/: Index.htm  README.md
Javascript/Scripts/: debugConsole.js  jquery-1.6.2.min.js
Javascript/Styles/: default.css
Lua/: OrtcClient.lua  README.md  main.lua
Mac OSX/: README.md
NodeJs/: README.md  ortc-api-demo.js
PHP/: README.md  ortc.php  sample.php
PhoneGap/: README.md  config.xml  index.html
PhoneGap/scripts/: phonegap-websocket.js
Python/: README.md  example_menu.py  example_simple.py  ortc.py  ortc_extensibility.py
Python (Django)/: README.md  db.sqlite3  ortc.py
Python (Django)/mysite/: settings.py  urls.py
Python (Django)/polls/: admin.py  models.py  tests.py  urls.py  views.py
Ruby/: README.md  ortc.rb  ortc_example.rb  ortc_example2.rb  ortc_extensibility.rb
Silverlight4/: App.xaml  App.xaml.cs  Ibt.Ortc.Demo.SilverlightApplication.csproj  Ibt.Ortc.Demo.SilverlightApplication.sln  MainPage.xaml  MainPage.xaml.cs  README.md  app.config
Silverlight4/Properties/: AssemblyInfo.cs
Swift/: -Bridging-Header.h
Swift/OrtcClientSwiftExample/: AppDelegate.swift  Info.plist  OrtcHandler.swift  ViewController.swift
Swift/OrtcClientSwiftExample.xcodeproj/: project.pbxproj
Swift/OrtcClientSwiftExampleTests/: Info.plist  OrtcClientSwiftExampleTests.swift
Titanium/: README.md
Titanium/android/: manifest
Titanium/iphone/: manifest  module.xcconfig
Titanium/mobileweb/: manifest  package.json
Unity/: MessagingSamples.unitypackage  README.md
Unity/Assets/: OrtcTest.cs  OrtcTest.unity  RealtimeTest.cs  RealtimeTest.unity
Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Windows 8.1 Universal Apps/: OrtcConsole.sln  README.md
WindowsPhone7/: App.xaml  App.xaml.cs  Ibt.Ortc.Demo.Mobile.csproj  Ibt.Ortc.Demo.Mobile.sln  MainPage.xaml  MainPage.xaml.cs  README.md
WindowsPhone7/Properties/: AssemblyInfo.cs  WMAppManifest.xml
iOS/: README.md
iOS Push Notifications from the device/: README.md
iOS Push Notifications from the device/CustomPushDemo/: AppDelegate.h  AppDelegate.m  CustomPushDemo-Info.plist  PushNotification.h  PushNotification.m  REST.h  REST.m  ViewController.h  ViewController.m  main.m
iOS Push Notifications from the device/CustomPushDemo.xcodeproj/: project.pbxproj
iOS Push Notifications from the device/CustomPushDemoTests/: CustomPushDemoTests-Info.plist  CustomPushDemoTests.m
iOS with Push Notifications/: README.md
iOS with Push Notifications/RTMChat/: AppDelegate.h  AppDelegate.m  DataModelChat.h  DataModelChat.m  RTMChat-Info.plist  RTMChat-Prefix.pch  RootViewController.h  RootViewController.m  RootViewController.xib  main.m
iOS with Push Notifications/RTMChat.xcodeproj/: project.pbxproj
iOS/OrtcClientUsage_2_0/: AppDelegate.h  AppDelegate.m  OrtcClientUsage_2_0-Info.plist  OrtcClientUsage_2_0-Prefix.pch  ViewController.m  ViewPostAuthController.h  ViewPostAuthController.m  main.m
iOS/OrtcClientUsage_2_0.xcodeproj/: project.pbxproj
iOS/OrtcClientUsage_2_1/: Info.plist  OrtcClient.h  Storyboard.storyboard  Utils.h  Utils.m  ViewController.h  ViewController.m  libicucore.dylib  main.m
iOS/OrtcClientUsage_2_1.xcodeproj/: project.pbxproj
iOS/OrtcClientUsage_2_1Tests/: Info.plist  OrtcClientUsage_2_1Tests.m
(+153 files in other folders)
