
include_directories(../lib)

add_executable(example example.c)
add_executable(benchmark benchmark.c)
add_executable(simple simple.c)

target_link_libraries(example ortc_static ${CURL_LIBRARIES} ${LWS_LIBRARIES})
target_link_libraries(benchmark ortc_static ${CURL_LIBRARIES} ${LWS_LIBRARIES})
target_link_libraries(simple ortc_static ${CURL_LIBRARIES} ${LWS_LIBRARIES})
if(NOT HAVE_REGEX_H)
  target_link_libraries(example ${REGEX_LIB})
  target_link_libraries(benchmark ${REGEX_LIB})
  target_link_libraries(simple ${REGEX_LIB})
endif()
if(NOT CMAKE_THREAD_LIBS_INIT)
  target_link_libraries(example ${PTHREAD_LIB})
  target_link_libraries(benchmark ${PTHREAD_LIB})
  target_link_libraries(simple ${PTHREAD_LIB})
else()
  target_link_libraries(example ${CMAKE_THREAD_LIBS_INIT})
  target_link_libraries(benchmark ${CMAKE_THREAD_LIBS_INIT})
  target_link_libraries(simple ${CMAKE_THREAD_LIBS_INIT})
endif()

if(NOT UNIX)
  target_link_libraries(example Ws2_32)
  target_link_libraries(benchmark Ws2_32)
  target_link_libraries(simple Ws2_32)
endif()